--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,6 +34,13 @@
         <!-- Sign Up Template-->
         <div id="signup-template">
           <h1>Sign Up to Create Your Account</h1>
+          <div class ="signup-form">
+            <label for="signup-username">Username</label>
+            <input type="text" id="signup-username" name="signup-username" required>
+            <br>
+            <label for="signup-password">Username</label>
+            <input type="text" id="signup-password" name="signup-password" required>
+          </div>
           <button id="create-user-button" onclick="callSaveNewUserEndpoint()">Create User</button>
           <nav>
             <ul>
@@ -46,12 +53,18 @@
         <!-- Log In Template-->
         <div id="login-template">
           <h1>Log In to Your Account</h1>
+          <div class="login-form">
+            <label for="login-username">Username</label>
+            <input type="text" id="login-username" name="login-username" placeholder="Enter username" required>
+            <br>
+            <label for="login-password">Password</label>
+            <input type="password" id="login-password" name="login-password" placeholder="Enter password" required>
+          </div>
           <nav>
             <ul>
               <button onclick="callLogInUserEndpoint(this)">Log In</button>
               <a href="#" id="pageLink" data-page="dashboard"></a>
-  
-            
+
               <li><a href='#' data-page="signup">Don't have an account? Create one here!</a></li>
               <li><a href='#' data-page="frontpage"> Back to Front Page</a></li>
             </ul>
