--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,10 +36,10 @@
           <h1>Sign Up to Create Your Account</h1>
           <div class ="signup-form">
             <label for="signup-username">Username</label>
-            <input type="text" id="signup-username" name="signup-username" required>
+            <input type="text" id="signup-username" name="signup-username" placeholder="Enter username" required>
             <br>
-            <label for="signup-password">Username</label>
-            <input type="text" id="signup-password" name="signup-password" required>
+            <label for="signup-password">Password</label>
+            <input type="text" id="signup-password" name="signup-password" max=12 placeholder="Enter password" required>
           </div>
           <button id="create-user-button" onclick="callSaveNewUserEndpoint()">Create User</button>
           <nav>
@@ -58,7 +58,7 @@
             <input type="text" id="login-username" name="login-username" placeholder="Enter username" required>
             <br>
             <label for="login-password">Password</label>
-            <input type="password" id="login-password" name="login-password" placeholder="Enter password" required>
+            <input type="password" id="login-password" name="login-password" max=12 placeholder="Enter password" required>
           </div>
           <nav>
             <ul>
